scripts/nullaway/original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8.txt
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/msc/ElkinItem.java:24: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			it = new ElkinItem(null, new Node(node.getId()));
			                   ^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/msc/Greedy.java:39: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return maxSet;
		^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/msc/Greedy.java:126: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/dataStructure/AdjList.java:19: error: [NullAway] initializer method does not guarantee @NonNull fields tempAdjl (line 12), PrimKeys (line 14), PrimParent (line 15) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public AdjList(int nverts) {
           ^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/dataStructure/AdjList.java:22: error: [NullAway] assigning @Nullable expression to @NonNull field
	tempAdjl = null;
	         ^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/dataStructure/AdjList.java:100: error: [NullAway] assigning @Nullable expression to @NonNull field
    	tempAdjl = null;
    	         ^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/dataStructure/ALNode.java:9: error: [NullAway] initializer method does not guarantee @NonNull field prox (line 7) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    ALNode (int vertid, double w) {
    ^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/dataStructure/AdjMatrix.java:36: error: [NullAway] initializer method does not guarantee @NonNull fields MCPmatrix (line 18), P (line 19), MCPmatrix2Check (line 21), P2Check (line 22), local2CheckAdjList (line 26), localAdjList (line 34) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public AdjMatrix (int nverts) {
           ^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/dataStructure/AdjMatrix.java:268: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    	return null;
    	^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/dataStructure/AdjMatrix.java:277: error: [NullAway] passing @Nullable parameter 'adjl' where @NonNull is required
    		adjl = insertInList(adjl, j, MCPmatrix[index][j]);
    		                    ^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/dataStructure/AdjMatrix.java:281: error: [NullAway] returning @Nullable expression from method with @NonNull return type
	return adjl;
	^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/algorithms/DSMDStAlgorithm.java:38: error: [NullAway] initializer method does not guarantee @NonNull fields globalAdjl (line 22), uninformedAdjl (line 23), arborescenceSPT (line 36) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DSMDStAlgorithm(int nsize, double nmprange, int sourceId, int terminalsId[], double delaysTerm[], PositionTable npt, Weight w) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/algorithms/SPT.java:15: error: [NullAway] initializer method does not guarantee @NonNull field arbAdjMatrix (line 13) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public SPT(int nsize, double nmprange, int sourceId, int[] terminalsId,
	       ^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/algorithms/SPT.java:60: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/algorithms/ApproximationAlgorithm.java:41: error: [NullAway] initializer method does not guarantee @NonNull fields localAdjl (line 26), violatedTer (line 29) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public ApproximationAlgorithm(int nsize, double nmprange, int sourceId,
           ^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/algorithms/ApproximationAlgorithm.java:120: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
    			v2Set.add(new ElkinItem(null, new Node(terminalsLeft[i])));
    			                        ^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/algorithms/MSCBasedAlgorithm.java:48: error: [NullAway] initializer method does not guarantee @NonNull fields uninformedTerminals (line 29), uninformedTerminalsDelay (line 30), greedy (line 32), chosenItem (line 34), chosenPseudo (line 35), realChosenPseudo (line 35) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public MSCBasedAlgorithm(int nsize, double nmprange, int sourceId,
	       ^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/algorithms/MSCBasedAlgorithm.java:126: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    	return null;
    	^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/algorithms/MSCBasedAlgorithm.java:151: error: [NullAway] dereferenced expression minItem is @Nullable
    		realChosenPseudo.add(new PseudoNode(new Node(minItem.getPseudo().getInformed().getId()), new Node(minItem.getPseudo().getUninformed().getId())));
    		                                                    ^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/algorithms/MSCBasedAlgorithm.java:215: error: [NullAway] passing @Nullable parameter 'pseudo' where @NonNull is required
	    				sourceSet.addItem(new ElkinItem(pseudo, new Node(uninformedTer.get(i))));
	    				                                ^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/algorithms/SIM.java:36: error: [NullAway] initializer method does not guarantee @NonNull field violatedTerminals (line 30) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public SIM(int nsize, double nmprange, int sourceId, int[] terminalsId,
	       ^
    (see http://t.uber.com/nullaway )
../original/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/algorithms/SIM.java:148: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
				v2Set.add(new ElkinItem(null, new Node(nextList.get(i).getDestination())));
				                        ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
22 errors
